	* typeck.c: add field level 77 to any generated register (previously was 0),
	  those now show up in the symbol and xref list and dump output if they are
	  used (including GDB debugging extensions)
	* typeck.c (cb_build_generic_register): now handles VALUE definition and
	  checks for "able to parse complete definition"

2022-07-14  Matthew Remacle <mattata@users.sf.net>

	* tree.c (literal_for_diagnostic): fixed #844 stack-based buffer overflow

2022-07-14  Simon Sobisch <simonsobisch@gnu.org>

	* config.def, config.c: changed defaultbyte option from "INT" to ANY"
	  with explicit check for "init" (GnuCOBOL default behavior, now also
	  allowing to set it after it was set different) and "none" (in
	  preparation of missing feature, for now => implicit 0)

2022-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (read_literal): do the necessary conversion for national
	  literals (simple approach, only working with source in iso-8859-15
	  or plain ascii)
	* typeck.c (get_value): return correct numeric value for national
	  (utf16) literals
	* tree.c (cb_build_intrinsic): fixed optimized length generation for
	  national fields and literals
	* typeck.c (cb_validate_program_environment): refactored,
	  reducing variable scope and extracted (validate_alphabet) and
	  (check_class_duplicates); call the later depending on
	  cb_warn_additional, no need to test if the final result is ignored
	* typeck.c (validate_alphabet): adjustments for national literals,
	  now partially supported
	* scanner.l: moved static literal_error to local variable,
	  passing it (to error_literal); return a valid literal in case of
	  literal errors (intead of cb_error_node) to prevent spurious
	  follow-up errors on their use

2022-07-08  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (cancel_body): preparation for CANCEL ALL

2022-06-17  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* config.def, typeck.c (cb_emit_accept_name, cb_build_display_name):